--- a/flightmare/flightpy/configs/vision/config.yaml
+++ b/flightmare/flightpy/configs/vision/config.yaml
@@ -1,5 +1,5 @@
 environment:
-  level: "medium" # three difficulty level [easy, medium, hard]
+  level: "realtrees_random" # three difficulty level [easy, medium, hard]
   env_folder: "environment_73"
   world_box: [-20, 80, -10, 10, 0.0, 15] # Bounding box applied during training, exiting this box terminates the episode. [xmin, xmax, ymin, ymax, zmin, zmax]
   goal_vel: [1.0, 0.0, 0.0] # goal velicty for tracking vx, vy, vz
