July 22, 2024 Update: first major update; Full install and testing instructions and code available! Includes updates to setup files, launch_evaluation.bash, and to datashare files.

--- a/envtest/ros/summary.yaml
+++ b/envtest/ros/summary.yaml
@@ -1,6 +1,11 @@
 rollout_1:
-  Success: false
-  number_crashes: 1
+  Success: true
+  number_crashes: 0
   segment_times:
-    '10': 2.180000066757202
-  time_to_finish: 2.180000066757202
+    '10': 2.190000057220459
+    '20': 4.300000190734863
+    '30': 6.25
+    '40': 8.25
+    '50': 10.25
+    '60': 12.27999997138977
+  time_to_finish: 12.27999997138977
